<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/welcomeHeaderContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:background="@drawable/welcome_header_background"
        android:elevation="4dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:padding="12dp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_weight="1" android:layout_height="0dp">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/description_application_text"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingBottom="16dp"/>
    </ScrollView>


        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ok_button_text"
            android:backgroundTint="@color/medium_teal"/>
</LinearLayout>