<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.monitor.MonitorPhotoFragment"
    android:background="@color/white">

    <ImageView
        android:id="@+id/topBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.85"
        android:contentDescription="@string/top_background"
        android:scaleType="centerCrop"
        android:src="@drawable/insta1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/monitorHeaderContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        android:background="@drawable/welcome_header_background"
        android:padding="1dp"
        android:elevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/monitorHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:padding="10dp" />
    </LinearLayout>

    <!-- Partie supérieure : tagList dans une CardView -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tagCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/monitorHeaderContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/actions"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.58">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/fair_gray">

            <TextView
                android:id="@+id/tagListText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/tag_choice_text"
                android:textColor="@color/medium_teal"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="@drawable/divider"
                android:showDividers="middle">

                <!-- Élément 1 : Nude -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">

                    <CheckBox
                        android:id="@+id/checkNude"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nude_tag"
                        android:textColor="@color/medium_teal"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/settingsButtonNude"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/setting_icon_description"
                        android:src="@drawable/baseline_menu_24"
                        app:tint="@color/medium_teal" />
                </LinearLayout>

                <!-- Élément 2 : Children -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">

                    <CheckBox
                        android:id="@+id/checkChildren"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/children_tag"
                        android:textColor="@color/medium_teal"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/settingsButtonChildren"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/setting_icon_description"
                        android:src="@drawable/baseline_menu_24"
                        app:tint="@color/medium_teal" />
                </LinearLayout>

                <!-- Élément 3 : Credit Card -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">

                    <CheckBox
                        android:id="@+id/checkCreditCard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/credit_card_tag"
                        android:textColor="@color/medium_teal"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/settingsButtonCreditCard"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/setting_icon_description"
                        android:src="@drawable/baseline_menu_24"
                        app:tint="@color/medium_teal" />
                </LinearLayout>

                <!-- Élément 4 : Identity Document -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp">

                    <CheckBox
                        android:id="@+id/checkIdentityDocument"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/identity_document_tag"
                        android:textColor="@color/medium_teal"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/settingsButtonIdentityDocument"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/setting_icon_description"
                        android:src="@drawable/baseline_menu_24"
                        app:tint="@color/medium_teal" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Partie inférieure : actions modernisées -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/actions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/fair_gray">

            <!-- Ligne Scan / Monitor -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/scanButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_purple"
                    android:text="@string/scan_button_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="16dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:minHeight="44dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeMaxTextSize="16sp"
                    android:autoSizeStepGranularity="1sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/monitorButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_purple"
                    android:text="@string/monitor_button_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="16dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:minHeight="44dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeMaxTextSize="16sp"
                    android:autoSizeStepGranularity="1sp" />
            </LinearLayout>

            <!-- Nouveau conteneur pour centrer Close -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/closeButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/medium_teal"
                    android:minWidth="170dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:text="@string/close_button_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageButton
                    android:id="@+id/settingsButtonInfoApp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="4dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/info_icon_description"
                    android:src="@drawable/info"
                    app:tint="@color/medium_teal"
                    app:layout_constraintTop_toTopOf="@id/closeButton"
                    app:layout_constraintBottom_toBottomOf="@id/closeButton"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>